--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,9 +1,13 @@
 <h1>Appointments</h1>
-<% @appointments.each do |appointment| %>
-  <% if current_user.doctor? %>
-    <%= render "card", user: patient(appointment), appointment: appointment %>
-  <% else %>
-    <%= render "card", user: doctor(appointment), appointment: appointment %>
-  <%end%>
+<% if @appointments.size > 0 %>
+  <% @appointments.each do |appointment| %>
+    <% if current_user.doctor? %>
+      <%= render "card", user: patient(appointment), appointment: appointment %>
+    <% else %>
+      <%= render "card", user: doctor(appointment), appointment: appointment %>
+    <% end %>
+  <% end %>
+<% else %>
+  <h4 class="text-center"> You don't have any appointments, look at the doctors and take the first one.</h4>
 <% end %>
 <%= paginate @appointments %>
