fix: I have changed the controller to avoid the error

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -8,6 +8,6 @@
     <% end %>
   <% end %>
 <% else %>
-  <h4 class="text-center"> You don't have any appointments, look at the doctors and take the first one.</h4>
+  <h4 class="text-center"> You don't have any appointments.</h4>
 <% end %>
 <%= paginate @appointments %>
